# ohtu-miniprojekti

./: .coveragerc  .env  .env.test  .gitignore  .pylintrc  README.md  log.html  output.xml  pyproject.toml  report.html  run_robot_tests.sh  tasks.py
.github/workflows/: main.yml
data/: test-database.db
documentation/: architecture.md  db-model.md  loppuraportti-fi.md  operation-manual.md
imports/: bib.bib
src/: AppLibrary.py  build.py  config.py  database_connection.py  index.py  initialize_database.py  interface.py  stub_io.py  user_input.py
src/entities/: reference.py
src/repositories/: reference_repository.py
src/services/: bib_export.py  bib_import.py  file_management.py  reference_service.py
src/tests/: add_reference.robot  bib_export_test.py  bib_import_test.py  commands_intergraito_tests.robot  conftest.py  interface_test.py  reference_repository_test.py  reference_service_test.py  resource.robot  user-story-tests.robot  view_references.robot
src/tests/entities/: reference_test.py
src/ui/: commands.py  interface.py
